updates sessions endpoint

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -180,7 +180,7 @@ const data = await response.json()
 					eventStatus.textContent = "";
 				}, 1000);
 
-				loadEvents();
+				// loadEvents();
 			} catch (error) {
 				// status = error;
 				console.error("Error adding event:", error);
