--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,12 +7,16 @@ import Card from '../components/Card.astro';
 
 // let response = await GET(Astro)
 // const data = await response.json()
+const {
+  geo: { city },
+} = Astro.locals.netlify.context;
 
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
 		<h1>This works?</h1>
+		<h1>Hello there, friendly visitor from {city}!</h1>
 	<!-- <h1>{data.greeting} world!</h1> -->
 		<!-- <svg
 			class="astro-a"
