trying to get context

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,11 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 
-// import { GET } from './api/check-password.ts';
+import { GET } from './api/check-password.ts';
 // console.log("DB_PASSWORD: ", import.meta.env.DB_PASSWORD);
 
-// let response = await GET(Astro)
-// const data = await response.json()
+let response = await GET(Astro)
+const data = await response.json()
 const {
   geo: { city },
 } = Astro.locals.netlify.context;
@@ -17,7 +17,7 @@ const {
 	<main>
 		<h1>This works?</h1>
 		<h1>Hello there, friendly visitor from {city}!</h1>
-	<!-- <h1>{data.greeting} world!</h1> -->
+		<h1>{data.greeting} world!</h1>
 		<!-- <svg
 			class="astro-a"
 			width="495"
